@@ -24,12 +24,13 @@
 }
 \usage{
 \method{plot}{profile}(x, ...)
-\method{pairs}{profile}(x, colours = 2:3, ...)
+\method{pairs}{profile}(x, colours = 2:3, which = names(x), ...)
 }
 \arguments{
   \item{x}{an object inheriting from class \code{"profile"}.}
-  \item{colours}{Colours to be used for the mean curves conditional on
+  \item{colours}{colours to be used for the mean curves conditional on
     \code{x} and \code{y} respectively.}
+  \item{which}{names or number of parameters in pairs plot}
   \item{\dots}{arguments passed to or from other methods.}
 }
 \details{
@@ -45,7 +46,9 @@
   respectively.  In the case of an exactly bivariate normal profile
   likelihood, these two curves would be straight lines giving the
   conditional means of y|x and x|y, and the contours would be exactly
-  elliptical.
+  elliptical. The \code{which} argument allows you to select a subset
+  of parameters; the default corresponds to the set of parameters that have 
+  been profiled. 
 }
 \author{
   Originally, D. M. Bates and W. N. Venables for S (in 1996).
@@ -56,7 +59,7 @@
   \code{\link{profile.glm}}, \code{\link{profile.nls}}.
 }
 \examples{
-## see ?profile.glm for an example using glm fits.
+## see ?profile.glm for another example using glm fits.
 
 ## a version of example(profile.nls) from R >= 2.8.0
 fm1 <- nls(demand ~ SSasympOrig(Time, A, lrc), data = BOD)
@@ -69,6 +72,22 @@ x <- -(1:100)/10
 y <- 100 + 10 * exp(x / 2) + rnorm(x)/10
 nlmod <- nls(y ~  Const + A * exp(B * x), start=list(Const=100, A=10, B=1))
 pairs(profile(nlmod))
+
+## example from Dobson (1990) (see ?glm)
+counts <- c(18,17,15,20,10,20,25,13,12)
+outcome <- gl(3,1,9)
+treatment <- gl(3,3)
+## this example is only formally a Poisson model. It is really a 
+## comparison of 3 multinomials. Only the interaction parameters are of 
+## interest.
+glm.D93i <- glm(counts ~ outcome * treatment, family = poisson())
+pr1 <- profile(glm.D93i)
+pr2 <- profile(glm.D93i, which=6:9)
+plot(pr1)
+plot(pr2)
+pairs(pr1)
+pairs(pr2)
 }
+
 \keyword{models}
 \keyword{hplot}
